@@ -1,3 +1,8 @@
+2016-09-28  Wilco Dijkstra  <wdijkstr@arm.com>
+
+	* gimple-fold.c (gimple_fold_builtin): After failing to fold
+	strchr, also try the generic folding.
+
 2016-09-28  Martin Sebor  <msebor@redhat.com>
 
 	PR c/77762
